<resources>
    <string name="app_name">Recipe Android</string>

    <!--for facebook login-->
    <string name="facebook_app_id">1040751190736566</string>
    <string name="fb_login_protocol_scheme">fb1040751190736566</string>
    <string name="facebook_client_token">77588807aea293f7870694f931e83da8</string>

    <string name="sign_up">Sign Up</string>
    <string name="save_delicious_recipes_and_get_personalized_content">Save delicious recipes and get personalized content.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="log_in_welcome_text">Welcome back? You’re just a tap away from something delicious.</string>
    <string name="log_in_title">Log In</string>
    <string name="start_cooking">START COOKING !</string>
    <string name="password_hint_text">Password</string>
    <string name="email_text_hint">Email</string>
    <string name="privacy_notice_terms_of_use_string">By using SideChef, you agree to our Privacy Notice and\nTerms of Use</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="log_in_string">Log In</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="cook_with_confidence">Cook with Confidence</string>
    <string name="check_box_string">I would like to receive recipe inspiration, meal plans, updates, and more!</string>
    <string name="next">NEXT</string>
    <string name="app_name_title">S I D E C H E F</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="the_passwords_doesn_t_match">The passwords doesn\'t match</string>
    <string name="confirm_password_can_t_be_empty">Confirm Password can\'t be empty</string>
    <string name="password_must_contain_at_least_1_letter">Password must contain at least 1 letter</string>
    <string name="password_must_contain_at_least_1_special_character">Password must contain at least 1 special character</string>
    <string name="password_must_contain_at_least_2_numbers">Password must contain at least 2 numbers</string>
    <string name="nine_characters_minimum_and_remaining">9 characters minimum including at least 1 letter, 2 digits and 1 special characters</string>
    <string name="this_password_can_t_be_blank">This password can\'t be blank</string>
    <string name="the_email_can_t_be_blank">The email can\'t be blank</string>
    <string name="that_s_not_a_valid_email">That\'s not a valid email</string>
    <string name="community_pick_img">community_pick_img</string>
    <string name="community_pick">Community Pick</string>
    <string name="recipe">Recipe</string>
    <string name="by">By</string>
    <string name="nutrition_per_serving">Nutrition per serving</string>
    <string name="view_all">View All</string>
    <string name="view_directions"><u>View Directions</u></string>
    <string name="complete_the_meal">Complete the meal</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="devider_text"> / </string>
    <string name="metric">Metric</string>
    <string name="us">US</string>
    <string name="daily_values_explanation">* Percent Daily Values are based on a 2,000 calorie diet. Your Daily values may be higher or lower depending on your calorie needs.</string>
    <string name="nutrition_disclaimer">Disclaimer: All information and tools presented and written within this site are intended for informational purposes only. If you have any concerns or questions about your health, please consult with a physician or other health-care professional.</string>
    <string name="lorem_ipsum"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.]]></string>

    <string name="cart_recipe_item_count">%1$d Recipe • %2$d items</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_quantity">Quantity</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="view_recipe">VIEW RECIPE</string>

    <string-array name="server_counts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

</resources>