<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/bg_ingredient_item"
    android:padding="16dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:gravity="center_vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:background="@color/black"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/ingredient_pic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/recipe_name"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:lines="1"
            android:textColor="@color/color_text_secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ingredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:lines="1"
            android:text="@string/ingredient_name"
            android:textColor="@color/color_text_primary"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredientQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ingredient_quantity"
            android:textColor="@color/color_text_primary"
            android:includeFontPadding="false"
            android:textSize="14sp" />

    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ingredientCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:buttonIconTint="@color/white"
        app:buttonTint="@color/color_text_secondary"
        android:focusableInTouchMode="false" />

</LinearLayout>

